kubernetes/apps/kube-system/cilium/gateway/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.batcave
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.50.10.1
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.batcave"
      allowedRoutes:
        namespaces:
          from: All
